# CyberCat

./: .gitattributes  .gitignore  CLAUDE.md  CyberCat-Explained.md  LICENSE  Output.md  PROJECT_STATE.md  Project Brief.md  ProjectIdea.md  README.md  START_HERE.md  randomPrompt.md  start.sh  stop.sh
Random MD/: Output.md
agent/: Dockerfile  README.md  pyproject.toml
agent/cct_agent/: __init__.py  __main__.py  checkpoint.py  config.py  events.py  process_state.py  shipper.py
agent/cct_agent/parsers/: auditd.py  conntrack.py  sshd.py
agent/cct_agent/sources/: tail.py
agent/tests/: test_auditd_parser.py  test_checkpoint.py  test_conntrack_parser.py  test_events_network.py  test_events_process.py  test_main_orchestration.py  test_process_state.py  test_shipper.py  test_sshd_parser.py  test_tail.py
backend/: .env.example  Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_classification_reason_and_tags.py  0003_preseed_lab_assets.py  0004_add_wazuh_cursor.py  0005_response_state_tables.py  0006_phase11_action_result_partial.py  0007_multi_operator_auth.py  0008_add_incident_summary.py  0009_incident_merge_split.py
backend/app/: cli.py  config.py  enums.py  main.py  seeder.py
backend/app/api/: admin.py
backend/app/api/routers/: attack.py  blocked_observables.py  detections.py  entities.py  events.py  evidence_requests.py  incidents.py  lab_assets.py  responses.py  streaming.py  wazuh.py
backend/app/api/schemas/: attack.py  detections.py  entities.py  errors.py  events.py  incidents.py  responses.py
backend/app/attack/: catalog.json  catalog.py
backend/app/auth/: dependencies.py  models.py  oidc.py  router.py  security.py
backend/app/correlation/: __init__.py  auto_actions.py  engine.py  extend.py  merge.py  split.py
backend/app/correlation/rules/: endpoint_compromise_join.py  endpoint_compromise_standalone.py  identity_compromise.py  identity_endpoint_chain.py
backend/app/db/: models.py  redis.py  redis_state.py  session.py
backend/app/detection/: __init__.py  engine.py
backend/app/detection/rules/: auth_anomalous_source_success.py  auth_failed_burst.py  blocked_observable.py  process_suspicious_child.py
backend/app/detection/sigma/: __init__.py  compiler.py  field_map.py  loader_registration.py  parser.py
backend/app/detection/sigma_pack/: logon_remote_explicit_credentials.yml  network_connection_win_susp_outbound.yml  pack.yml  proc_creation_win_lolbin_certutil_download.yml  proc_creation_win_lolbin_mshta_susp.yml  proc_creation_win_office_spawn_shell.yml  proc_creation_win_powershell_encoded_cmd.yml  proc_creation_win_rundll32_registered.yml
backend/app/ingest/: dedup.py  entity_extractor.py  normalizer.py  pipeline.py  retry.py  wazuh_decoder.py  wazuh_poller.py
backend/app/response/: executor.py  policy.py  recommendations.py
backend/app/response/dispatchers/: agent_lookup.py  wazuh_ar.py
backend/app/response/handlers/: block_observable.py  elevate_severity.py  flag_host_in_lab.py  invalidate_session.py  kill_process.py  quarantine_host.py  request_evidence.py  tag_incident.py
backend/app/streaming/: __init__.py  bus.py  events.py  publisher.py
backend/scripts/: dump_openapi.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_gating.py  test_auth_router.py  test_blocked_observable_detection.py  test_detection_fixtures.py  test_endpoint_standalone.py  test_event_validation_negative.py  test_evidence_request_auto_propose.py  test_handlers_ar_integration.py  test_hot_route_query_count.py  test_identity_endpoint_chain.py  test_incident_merge.py  test_incident_split.py  test_postgres_disconnect.py  test_recommendations_endpoint.py  test_redis_unavailable.py  test_response_action_emits.py  test_response_flow_phase9.py  test_sigma_fires.py  test_sse_stream.py  test_wazuh_poller.py
backend/tests/unit/: test_auth_security.py  test_bus_supervisor.py  test_handlers_real.py  test_postgres_resilience.py  test_recommendations.py  test_redis_unavailable.py  test_sigma_compiler.py  test_sigma_field_map.py  test_sigma_parser.py  test_streaming_event_bus.py  test_streaming_publisher.py  test_summary_jargon.py  test_wazuh_ar_dispatcher.py  test_wazuh_decoder.py  test_wazuh_poller_resilience.py
(+245 files in other folders)
