[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cct-agent"
version = "0.1.0"
description = "CyberCat custom telemetry agent — tails sshd logs and ships canonical events to the CyberCat backend."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-randomly>=3.15",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["cct_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Keep pytest's tmp_path inside the project dir so sandboxed runs that can't
# write to %TEMP% still work. Safe to override at the CLI with --basetemp.
addopts = "--basetemp=.pytest-basetemp"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008", "UP007"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
ignore_missing_imports = true
